# BigPictureTV

./: .gitignore  .gitmodules  .qmlls.ini  BigPictureTV-CPP.pro  BigPictureTV.pro  BigPictureTV.py  BigPictureTV.spec  CMakeLists.txt  README.md  audiomanager.cpp  audiomanager.h  bigpicture-external.ps1  bigpicture-external.py  bigpicture-external.spec  bigpicturetv.cpp  bigpicturetv.h  bigpicturetv.ui  colorutils.cpp  design.py  design.ui  help.py  main.cpp  requirements.txt  resources.qrc  settings.json  setup.py  setup_cxfreeze.py  steamwindowmanager.cpp  steamwindowmanager.h  tr_script.py  utils.cpp  utils.h
.github/: FUNDING.yml
.github/workflows/: build-and-release.yaml  build-main.yml  build.yaml  build.yml  qt-msvc-build-and-release.yml  qt-msvc-build.yml  release.yml
AudioManager/: AudioManager.cpp  AudioManager.h
BigPictureTV/: BigPictureTV.cpp  BigPictureTV.h  bigpicturetv.h
Configurator/: Configurator.cpp  Configurator.h  Configurator.ui
NightLightSwitcher/: NightLightSwitcher.cpp
Resources/: resources.qrc
Resources/Tr/: BigPictureTV_en.ts  BigPictureTV_fr.ts
ShortcutManager/: ShortcutManager.cpp  ShortcutManager.h
SteamWindowManager/: SteamWindowManager.cpp  SteamWindowManager.h
Utils/: Utils.cpp  Utils.h
include/: appbridge.h  appconfiguration.h  audiodevicenotifier.h  displaymanager.h  displaystatemanager.h  policyconfig.h  steamwindowmanager.h  utils.h  windoweventmonitor.h
qml/: Card.qml  CustomComboBox.qml  CustomStackView.qml  Main.qml  Tray.qml
qml/Panes/: ActionsPane.qml  AudioPane.qml  GeneralPane.qml  VideoPane.qml
qml/Singletons/: Constants.qml
resources/: resources.qrc  translations.qrc
src/: BigPictureTV.py  appbridge.cpp  appconfiguration.cpp  audio_manager.py  audiodevicenotifier.cpp  audiomanager.cpp  bigpicturetv.cpp  bigpicturetv.h  colorutils.h  design.py  displaymanager.cpp  displaystatemanager.cpp  main.cpp  mode_manager.py  monitor_manager.py  nightlightswitcher.cpp  settings_window.py  setup.py  shortcut_manager.py  shortcutmanager.cpp  shortcutmanager.h  status_monitor.py  steam_language_reader.py  steamwindowmanager.cpp  tooltiped_slider.py  utils.cpp  utils.h  utils.py  window_monitor.py  windoweventmonitor.cpp
src/AboutWindow/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui
src/AudioManager/: audiomanager.cpp  audiomanager.h
src/Utils/: Utils.cpp  (+3 more)
ui/: design.ui  help.ui
utils/: pyaudiodevices.py
(+41 files in other folders)
